--- a/projects/movie-wedpage.html
+++ b/projects/movie-wedpage.html
@@ -44,17 +44,19 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Example Project</h1>
-            <p>Text about the project</p>
+            <h1 class="margin text-center">Movie wedpage</h1>
+            <p>Learnd </p>
             <p>More text about the project.</p>
-            <a href="#">Link about the project</a><br>
+            <a href="https://app.pickcode.io/project/cmhowjcmz6kol11jyc9ag0eaj">code of movie wedpage</a><br>
+            <a href="https://app.pickcode.io/share/cmhowjcmz6kol11jyc9ag0eaj">Perview to Movie wedpage</a><br>
+            
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
 
-            <img src="../img/avatar.png" class="img-fluid project-img">
+            <img src="../img/movie.png" class="img-fluid project-img">
 
 
             <div class="row">
