Uncomment movie webpage card in index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,19 @@
         <div class="container">
             <div class="row">
 
-                <!--
+                
+                <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie webpage</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
+                            <p class="card-text">A brief explanation of the project.</p>
+                            <a href="project/movie-webpage.html" class="card-link">Project file</a>
+                        </div>
+                    </div>
+                </div>
+                
+<!--
                 <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
@@ -65,7 +77,6 @@
                     </div>
                 </div>
                 -->
-
             </div>
         </div>
         </a>
