--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -45,8 +45,9 @@
         <div class="container">
 
             <h1 class="margin text-center">Movie wedpage</h1>
-            <p>Learnd </p>
-            <p>More text about the project.</p>
+            <p>Mr.Mueller gave a partner work. In wich we had to make a wedsite promoting a move, we came up with and what it was going to be about. Also we had to use CSS.</p>
+            <p> We made this fantasy movier in which it's three friends and they're trying to stay togerther against every and everone because there ancestors and familys don't get along. </p>
+            <p>For my partner and I are anly issue was the layout because we would see different in our computers and we would think there was something worng with the webpage but them Mr.Mueller siad it's just the layout and thay we would work on that in future lessons.</p>
             <a href="https://app.pickcode.io/project/cmhowjcmz6kol11jyc9ag0eaj">code of movie wedpage</a><br>
             <a href="https://app.pickcode.io/share/cmhowjcmz6kol11jyc9ag0eaj">Perview to Movie wedpage</a><br>
             
